# sabiyarn

./: .gitignore  README.md  example_text_completion.py  modal_hosting.py  pyproject.toml  requirements.txt  sabiyarn.rar  test_generation.py
.github/workflows/: test.yml
config/: config.yaml
cut_cross_entropy/: __init__.py  cce.py  cce_backward.py  cce_lse_forward.py  indexed_dot.py  linear_cross_entropy.py  torch_compile.py
data/: constant_tokens.py  data_distribution.py  prepare.py  prepare_data_download_structure.py  prepare_data_for_tokenizer_training.py  sabiyarn_config.yaml
eval/: eval.py  modal_eval.py
finetuning/: lang_id.py  modal_script.py
sabiyarn/: MHA.py  MLA.py  __init__.py  differential_attention.py  generation.py  memory_reasoning.py  model.py  moe.py  multi_token_loss.py  reason_model.py  sabiyarn_tokenizer.model  sabiyarn_tokenizer.vocab  test.py  tokenizer.py
sabiyarn/.github/workflows/: test.yml
tests/: modal_test_runner.py  test_diff_attn.py  test_features.py  test_layer_sharing.py  test_mha.py  test_mla.py  test_model_initialization.py  test_multitoken.py
train/: train.py  utils.py
training/: ablation_tests.py  constant_tokens.py  modal_train.py  new_train.py  tokenizer_training.ipynb  train.ipynb  train.py  training_attention_mask.py  utils.py
